--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header img {
 }
 header h1 {
   margin: 0;
+  cursor: pointer;
 }
 
 header span {
@@ -203,4 +204,5 @@ header a {
     .game-finder-area h2 {
         font-size: 20px;
     }
+
 }
